# stolas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
docs/: logic.md  operands.md  struct.md  types.md
src/stolas/: mypy_plugin.py
src/stolas/logic/: __init__.py  access.py  access.pyi  collection.py  collection.pyi  common.py  common.pyi  flow.py  flow.pyi  placeholder.py  placeholder.pyi  predicates.py  predicates.pyi  utils.py  utils.pyi
src/stolas/operand/: __init__.py  arity.py  arity.pyi  cases.py  cases.pyi  concurrent.py  concurrent.pyi  ops.py  ops.pyi  safe.py  safe.pyi
src/stolas/struct/: __init__.py  struct.py  struct.pyi  trait.py  trait.pyi
src/stolas/types/: __init__.py  effect.py  effect.pyi  many.py  many.pyi  option.py  option.pyi  result.py  result.pyi  validated.py  validated.pyi
tests/integration/: test_composition.py  test_concurrent_integration.py  test_cross_type_bridging.py  test_effect_integration.py  test_many_integration.py  test_operand_integration.py  test_ops_integration.py  test_placeholder_integration.py  test_trait_integration.py  test_validated_integration.py
tests/unit/: test_arity.py  test_cases.py  test_concurrent.py  test_effect.py  test_logic.py  test_many.py  test_ops.py  test_option.py  test_placeholder.py  test_result.py  test_safe.py  test_struct.py  test_trait.py  test_validated.py
