[project]
name = "stolas"
version = "0.1.2"
description = "The strict, multi-paradigm framework enabling pure functional patterns in Python."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Stolas Contributors"}
]
keywords = ["functional", "monads", "immutable", "struct", "trait"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/eaksit-bua/stolas"
Repository = "https://github.com/eaksit-bua/stolas"
Documentation = "https://github.com/eaksit-bua/stolas#readme"

[build-system]
requires = ["setuptools>=61.0,<75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ["src/stolas/mypy_plugin.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
